# xmtp-message-history-server

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  upload-client.py
.github/workflows/: build_and_push_docker_image.yml  build_and_test.yml
examples/: download.js  fetch-bundle.py  package.json  requirements.txt  test_bundle.jsonl  upload-bundle.py  upload.js
src/: cleanup.rs  main.rs
src/client_events/: _card.html  _change.html  _metric.html  index.html  mod.rs  show.html  styles.css
