[package]
name = "xmtp-message-history-server"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.6.5"
futures = "0.3.30"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.95"
filetime = "0.2.25"

[dev-dependencies]
actix-web = "4.9.0"
tempfile = "3.16.0"
