[package]
name = "xmtp-message-history-server"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.6"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
anyhow = "1"
filetime = "0.2"
hex = "0.4"
tracing = { version = "0.1", features = ["log"] }
xmtp_archive = {git  = "https://github.com/xmtp/libxmtp", branch = "coda/more-events"}
xmtp_proto = {git = "https://github.com/xmtp/libxmtp", branch = "coda/more-events"}
xmtp_db = {git = "https://github.com/xmtp/libxmtp", branch = "coda/more-events"}
serde = "1.0.219"
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"
base64 = "0.22.1"
convert_case = "0.8.0"

[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master" }
diesel_derives = { git = "https://github.com/diesel-rs/diesel", branch = "master" }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", branch = "master" }
tracing-forest = { git = "https://github.com/QnnOkabayashi/tracing-forest", branch = "main" }

[dev-dependencies]
actix-web = "4.9.0"
tempfile = "3.16.0"
